fix: fix scrollbar pushing body issue

--- a/styles/_globals.sass
+++ b/styles/_globals.sass
@@ -5,6 +5,12 @@
 html, body
   font-family: 'Open Sans', sans-serif
 
+html
+  @media screen and (min-width: 767.97px)
+    margin-left: calc(100vw - 100%)
+    margin-right: 0
+    overflow-y: scroll
+
 #__next
   display: flex
   flex-direction: column
